# djoc

./: .gitignore  404.html  CHANGELOG.md  CNAME  Cargo.toml  LICENSE  Makefile  Makefile.old  README.md  bib.html  block-quotes.html  changelog.md  code.html  commands.html  config.html  creating-your-first-document.html  djoc_sandbox.js  djoc_sandbox_bg.wasm  docs.html  flake.nix  formatting.html  getting-started.html  go.mod  go.sum  headings.html  images-and-figures.html  index.html  index.js  index.xml  install.html  install.sh  installing.html  introduction.html  lists.html  main.css  main.go  main.min.2783f0724f814acb071aab731d45fd1d237e28c178f4f597d9231937bc78d8b3.css  main.min.5a9d193283bef97433322c279f98fa76e10743d2ba45401fe956e12a1efc9b93.css  markdown.html  math.html  (+12 more)
.github/workflows/: build-release.yml  build.yml  deploy-sandbox.yml  publish.yml
cmd/: add.go  build.go  command.go  download.go  edit.go  help.go  list.go  move.go  new.go  remove.go  stats.go  update.go
cmd/update/: update.go  update_embedded.go
core/: add.go  build.go  config.go  download.go  new.go  project_creation.go  section.go
core/bib/: bibentry.go  bibtex.go  csl.go  fetch.go
core/conf/: config.go  pandoc.go  test.json
doc/: Makefile  doc.md  index.html  main.css  template.html
doc/assets/: template.html
doc/css/: main.css
docs/: Makefile  book.toml  config.toml  djoc.toml  docs.md  docs.toml  document.toml  index.html  install.html  install.md  mdzk.toml  template.html
docs-src/: Makefile  docs.md  install.md  template.html
docs/assets/: main.scss  normalize.css
docs/book/: 404.html  bib.html  commands.html  config.html  creating-your-first-document.html  docs.html  index.html  installing.html  introduction.html  print.html  searchindex.js  searchindex.json
docs/book/markdown/: block-quotes.html  code.html  formatting.html  headings.html  images-and-figures.html  lists.html  markdown.html  math.html  paragraphs.html
docs/config/: index.html
docs/content/: _index.md  installing.md
docs/content/docs/: bibliography.md  commands.md  config.md  creating-your-first-document.md  getting-started.md  installing.md  terminology.md  workflow.md
docs/content/markdown/: block-quotes.md  code.md  formatting.md  headings.md  images-and-figures.md  lists.md  markdown.md  math.md  paragraphs.md  why-markdown.md
docs/content/menu/: index.md
docs/content/usage/: bibliography.md  commands.md  config.md  getting-started.md  workflow.md
docs/css/: fonts.css
docs/getting-started/: index.html
docs/installing/: index.html
docs/layouts/: index.html
docs/layouts/_default/: section.html  single.html
docs/layouts/partials/: head-common.html  katex.html  nav.html
docs/public/: 404.html  en.search-data.min.2cd19859b433edbdf7c94d3b889d90d33c0b65094752bc50795ded12cb09dfc9.json  en.search-data.min.89f715b03043124ca6b14b41826d4be71cd0d92bc37ca287c3aafcceffb26dbe.json  en.search-data.min.dcf2cdd2f4ebbacee9edeadc328dad142f03bf6deb5f6e879e7d71477a9a725f.json  en.search.min.32cf26d152812361c4cdf0607c21a1ab9d825d9699ffe8bee7993a5a8849e3c8.js  en.search.min.b76e5a8b58c0b7ab70e60f89b01aeed999d52a4f4346ea2145389ab2ab904c2e.js  en.search.min.d58410005a7678b48ac15a8cba71f8df4a95c01f054176c644e9c037369cd8e2.js  manifest.json
docs/public/docs/: index.html  index.xml
docs/public/markdown/: index.html  (+1 more)
docs/src/: .mdzk_summary.md  bib.md  bibliography.md  commands.md  config.md  configuration.dj  creating-your-first-document.md  docs.md  getting-started.dj  index.md  installing.md  introduction.dj  introduction.md  workflow.md
global/: exit.go
installing/: index.html
kodb/: __init__.py  add.py  add_and_remove.py  build.py  download.py  edit_and_list.py  log.py  make_project.py  references.py  switch_and_move.py  utils.py
kodb.old/: setup.py
kodb.old/kodb/: add_and_remove.py  edit_and_list.py  log.py  make_project.py
lua/: abstract.lua  crossref.lua  lua.go  section_crossref.lua  utils.lua  wordcount.lua
markdown/: block-quotes.html  code.html  formatting.html  headings.html  images-and-figures.html  index.html  index.xml  lists.html  markdown.html  math.html  paragraphs.html
markdown/block-quotes/: index.html
markdown/code/: index.html
markdown/formatting/: index.html
markdown/headings/: index.html
markdown/images-and-figures/: index.html
markdown/lists/: index.html
markdown/markdown/: index.html
markdown/math/: index.html
markdown/paragraphs/: index.html
markdown/why-markdown/: index.html
msg/: interactive.go  messages.go  style.go
sandbox/: Cargo.toml  Makefile
sandbox/public/: main.css
sandbox/src/: lib.rs
src/: author.rs  builder.rs  chapter.rs  date.rs  document.rs  error.rs  errors.rs  latex.rs  lib.rs  log.rs  main.rs  structure.rs  utils.rs  walk.rs
src/bib/: bibliography.rs  csl.rs  mod.rs
src/builder/: html.rs  mod.rs  pdf.rs
src/cli/: build.rs  clean.rs  compile.rs  init.rs  mod.rs
src/cmd/: build.rs  clean.rs  init.rs  mod.rs  reference.rs
src/config/: mod.rs
src/document/: builder.rs  chapter.rs  document.rs  mod.rs  preamble.tex
src/html/: katex.css  main.css  mod.rs
src/latex/: mod.rs  renderer.rs
src/manifest/: builder.rs  document.rs  mod.rs  serde_impls.rs
src/pandoc/: errors.rs  mod.rs  opts.rs
src/pdf/: mod.rs  status.rs
templates/: html.stpl  latex.stpl
test/: kodb.yaml
test/src/: 00_Here is a section.md  01_this_is_a_section.md  03_my_man.md  06_appendix.md
usage/: index.html  index.xml
usage/bibliography/: index.html
usage/commands/: index.html
usage/config/: index.html
usage/getting-started/: index.html
usage/workflow/: index.html
utils/: errutils.go  fileutils.go  shellutils.go  stringutils.go  utils_darwin.go  utils_unix.go  utils_windows.go
(+22 files in other folders)
