[package]
name = "djoc"
version = "0.1.0"
authors = ["Knut Magnus Aasrud <km@aasrud.com>"]
description = "The Djot document compiler"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/kmaasrud/djoc"
include = ["src/html/katex.css", "src/html/main.css"]


[dependencies]
anyhow = { version = "1.0.69", optional = true }
dirs = "4.0.0"
hayagriva = "0.3.0"
jotdown = "0.3.0"
log = { version = "0.4.17", features = ["std"] }
rayon = "1.6.1"
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.7.2"
ureq = "2.6.2"
url = "2.3.1"
[dependencies.chrono]
version = "0.4.26"
default-features = false
features = ["std", "unstable-locales"]
[dependencies.clap]
version = "4.1.4"
default-features = false
features = ["cargo", "derive", "error-context", "help", "usage", "std"]
optional = true
[dependencies.katex]
version = "0.4.6"
default-features = false
optional = true
[dependencies.tectonic]
version = "0.13.0"
default-features = false
features = ["geturl-reqwest", "native-tls-vendored"]
optional = true

[features]
default = ["cli", "html", "latex", "pdf"]
cli = ["anyhow", "clap", "chrono/clock"]
html = ["katex/duktape"]
html-wasm = ["katex/wasm-js"]
latex = []
pdf = ["anyhow", "latex", "tectonic"]

# VCPKG
[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "master"
[package.metadata.vcpkg.target]
x86_64-apple-darwin = { install = ["freetype", "harfbuzz[icu,graphite2]"] }
aarch64-apple-darwin = { triplet = "arm64-osx", install = [
    "freetype",
    "harfbuzz[icu,graphite2]",
] }
x86_64-unknown-linux-gnu = { install = [
    "fontconfig",
    "freetype",
    "harfbuzz[icu,graphite2]",
] }
x86_64-pc-windows-msvc = { triplet = "x64-windows-static", install = [
    "fontconfig",
    "freetype",
    "harfbuzz[icu,graphite2]",
] }
